--- a/WeatherPy/VacationPy.ipynb
+++ b/WeatherPy/VacationPy.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
     "import requests\n",
     "import gmaps\n",
     "import os\n",
-    "\n",
+    "import json\n",
     "# Import API key\n",
     "from api_keys import g_key"
    ]
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
        "[548 rows x 10 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,13 +297,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9f42764716924e909230810812a419f2",
+       "model_id": "d68934423f4b4225bfc6be6ffb5bd7b2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -338,10 +338,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "address =  ['ostrovnoy', 'mahebourg', 'cape town']\n",
+    "hotel_df = cities_df[(cities_df['Max Temp'] > 70) & (cities_df['Max Temp'] < 80)& (cities_df['Wind Speed'] < 10)& (cities_df['Cloudiness'] < 3)]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -358,17 +361,265 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City_ID</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Cloudiness</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Wind Speed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>7</td>\n",
+       "      <td>opuwo</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1558378523</td>\n",
+       "      <td>23</td>\n",
+       "      <td>-18.06</td>\n",
+       "      <td>13.84</td>\n",
+       "      <td>72.06</td>\n",
+       "      <td>5.44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70</th>\n",
+       "      <td>70</td>\n",
+       "      <td>ponta do sol</td>\n",
+       "      <td>0</td>\n",
+       "      <td>BR</td>\n",
+       "      <td>1558378767</td>\n",
+       "      <td>57</td>\n",
+       "      <td>-20.63</td>\n",
+       "      <td>-46.00</td>\n",
+       "      <td>73.68</td>\n",
+       "      <td>5.32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>87</th>\n",
+       "      <td>87</td>\n",
+       "      <td>ambilobe</td>\n",
+       "      <td>2</td>\n",
+       "      <td>MG</td>\n",
+       "      <td>1558378770</td>\n",
+       "      <td>92</td>\n",
+       "      <td>-13.19</td>\n",
+       "      <td>49.05</td>\n",
+       "      <td>74.76</td>\n",
+       "      <td>4.52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>88</th>\n",
+       "      <td>88</td>\n",
+       "      <td>cidreira</td>\n",
+       "      <td>0</td>\n",
+       "      <td>BR</td>\n",
+       "      <td>1558378770</td>\n",
+       "      <td>66</td>\n",
+       "      <td>-30.17</td>\n",
+       "      <td>-50.22</td>\n",
+       "      <td>76.56</td>\n",
+       "      <td>5.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>138</th>\n",
+       "      <td>138</td>\n",
+       "      <td>morondava</td>\n",
+       "      <td>0</td>\n",
+       "      <td>MG</td>\n",
+       "      <td>1558378780</td>\n",
+       "      <td>69</td>\n",
+       "      <td>-20.30</td>\n",
+       "      <td>44.28</td>\n",
+       "      <td>79.08</td>\n",
+       "      <td>9.06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>139</th>\n",
+       "      <td>139</td>\n",
+       "      <td>vaini</td>\n",
+       "      <td>0</td>\n",
+       "      <td>IN</td>\n",
+       "      <td>1558378780</td>\n",
+       "      <td>88</td>\n",
+       "      <td>15.34</td>\n",
+       "      <td>74.49</td>\n",
+       "      <td>78.90</td>\n",
+       "      <td>1.59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>176</th>\n",
+       "      <td>176</td>\n",
+       "      <td>nador</td>\n",
+       "      <td>0</td>\n",
+       "      <td>MA</td>\n",
+       "      <td>1558378499</td>\n",
+       "      <td>40</td>\n",
+       "      <td>35.17</td>\n",
+       "      <td>-2.93</td>\n",
+       "      <td>75.20</td>\n",
+       "      <td>6.93</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>297</th>\n",
+       "      <td>297</td>\n",
+       "      <td>mogok</td>\n",
+       "      <td>0</td>\n",
+       "      <td>MM</td>\n",
+       "      <td>1558378844</td>\n",
+       "      <td>51</td>\n",
+       "      <td>22.92</td>\n",
+       "      <td>96.51</td>\n",
+       "      <td>72.24</td>\n",
+       "      <td>2.77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>444</th>\n",
+       "      <td>444</td>\n",
+       "      <td>birjand</td>\n",
+       "      <td>0</td>\n",
+       "      <td>IR</td>\n",
+       "      <td>1558378880</td>\n",
+       "      <td>26</td>\n",
+       "      <td>32.86</td>\n",
+       "      <td>59.22</td>\n",
+       "      <td>71.60</td>\n",
+       "      <td>9.17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>494</th>\n",
+       "      <td>494</td>\n",
+       "      <td>baylo</td>\n",
+       "      <td>1</td>\n",
+       "      <td>PH</td>\n",
+       "      <td>1558378889</td>\n",
+       "      <td>69</td>\n",
+       "      <td>7.85</td>\n",
+       "      <td>126.06</td>\n",
+       "      <td>77.00</td>\n",
+       "      <td>1.07</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     City_ID          City  Cloudiness Country        Date  Humidity    Lat  \\\n",
+       "7          7         opuwo           0     NaN  1558378523        23 -18.06   \n",
+       "70        70  ponta do sol           0      BR  1558378767        57 -20.63   \n",
+       "87        87      ambilobe           2      MG  1558378770        92 -13.19   \n",
+       "88        88      cidreira           0      BR  1558378770        66 -30.17   \n",
+       "138      138     morondava           0      MG  1558378780        69 -20.30   \n",
+       "139      139         vaini           0      IN  1558378780        88  15.34   \n",
+       "176      176         nador           0      MA  1558378499        40  35.17   \n",
+       "297      297         mogok           0      MM  1558378844        51  22.92   \n",
+       "444      444       birjand           0      IR  1558378880        26  32.86   \n",
+       "494      494         baylo           1      PH  1558378889        69   7.85   \n",
+       "\n",
+       "        Lng  Max Temp  Wind Speed  \n",
+       "7     13.84     72.06        5.44  \n",
+       "70   -46.00     73.68        5.32  \n",
+       "87    49.05     74.76        4.52  \n",
+       "88   -50.22     76.56        5.50  \n",
+       "138   44.28     79.08        9.06  \n",
+       "139   74.49     78.90        1.59  \n",
+       "176   -2.93     75.20        6.93  \n",
+       "297   96.51     72.24        2.77  \n",
+       "444   59.22     71.60        9.17  \n",
+       "494  126.06     77.00        1.07  "
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hotel_df"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# geocoordinates\n",
+    "target_coordinates = ['-34.42, 19.24','32.68, -115.50','19.71,-155.08']\n",
+    "# target_search = \"ZA\"\n",
+    "target_radius = 5000\n",
+    "target_type = \"hotels\"\n",
+    "\n",
+    "# set up a parameters dictionary\n",
+    "params = {\n",
+    "    \"location\": target_coordinates[1],\n",
+    "#     \"keyword\": target_search,\n",
+    "    \"radius\": target_radius,\n",
+    "    \"type\": target_type,\n",
+    "    \"key\": g_key\n",
+    "}\n",
+    "\n",
+    "# base url\n",
+    "base_url = \"https://maps.googleapis.com/maps/api/place/nearbysearch/json\"\n",
+    "\n",
+    "# run a request using our params dictionary\n",
+    "response = requests.get(base_url, params=params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "    \"error_message\": \"The provided API key is invalid.\",\n",
+      "    \"html_attributions\": [],\n",
+      "    \"results\": [],\n",
+      "    \"status\": \"REQUEST_DENIED\"\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# convert response to json\n",
+    "places_data = response.json()\n",
+    "\n",
+    "# Print the json (pretty printed)\n",
+    "print(json.dumps(places_data, indent=4, sort_keys=True))"
+   ]
   },
   {
    "cell_type": "code",
