--- a/WeatherPy/VacationPy.ipynb
+++ b/WeatherPy/VacationPy.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
        "[548 rows x 10 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,13 +297,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d68934423f4b4225bfc6be6ffb5bd7b2",
+       "model_id": "0d5234779ec349d996a3ca8a70289474",
        "version_major": 2,
        "version_minor": 0
       },
@@ -569,13 +569,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# geocoordinates\n",
-    "target_coordinates = ['-34.42, 19.24','32.68, -115.50','19.71,-155.08']\n",
-    "# target_search = \"ZA\"\n",
+    "\n",
+    "target_coordinates = ['68.05, 39.51','-20.41, 57.70','-33.93, 18.42']\n",
+    "\n",
     "target_radius = 5000\n",
     "target_type = \"hotels\"\n",
     "\n",
@@ -591,13 +591,13 @@
     "# base url\n",
     "base_url = \"https://maps.googleapis.com/maps/api/place/nearbysearch/json\"\n",
     "\n",
-    "# run a request using our params dictionary\n",
+    "\n",
     "response = requests.get(base_url, params=params)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +605,7 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "    \"error_message\": \"The provided API key is invalid.\",\n",
+      "    \"error_message\": \"You must enable Billing on the Google Cloud Project at https://console.cloud.google.com/project/_/billing/enable Learn more at https://developers.google.com/maps/gmp-get-started\",\n",
       "    \"html_attributions\": [],\n",
       "    \"results\": [],\n",
       "    \"status\": \"REQUEST_DENIED\"\n",
