--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -828,35 +828,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "ename": "NameError",
-     "evalue": "name 'country' is not defined",
+     "evalue": "name 'city_id_list' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-9-45b69a38424b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m weather_list_df = pd.DataFrame({'City': city_name,\n\u001b[1;32m----> 2\u001b[1;33m                             \u001b[1;34m'Country'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mcountry\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m                             \u001b[1;34m'Latitude'\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mlatt\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m                             \u001b[1;34m'Longitude'\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mlong\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m                             \u001b[1;34m'Max Temp'\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mmax_temp\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'country' is not defined"
+      "\u001b[1;32m<ipython-input-10-bfc70a4f4845>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m cities_df = pd.DataFrame({\"City ID\": city_id_list, \"City\": city_name_list, \"Country\": country_list, \"Lat\": lat_list, \"Lng\": lng_list,\n\u001b[0m\u001b[0;32m      2\u001b[0m                          \u001b[1;34m\"Temperature\"\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mtemp_list\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Humidity\"\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mhumidity_list\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Clouds\"\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mclouds_list\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m                          \"Wind Speed\": wind_speed_list})\n\u001b[0;32m      4\u001b[0m \u001b[0mcities_df\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'city_id_list' is not defined"
      ]
     }
    ],
    "source": [
-    "weather_list_df = pd.DataFrame({'City': city_name,\n",
-    "                            'Country':country,\n",
-    "                            'Latitude': latt,\n",
-    "                            'Longitude': long,\n",
-    "                            'Max Temp': max_temp,\n",
-    "                            'Humidity': humidity,\n",
-    "                            'Cloudiness': cloudiness,\n",
-    "                            'Wind Speed': wind_speed})\n",
     "\n",
-    "\n",
-    "weather_list_df.head(5)\n",
-    "\n",
-    "\n"
+    "cities_df = pd.DataFrame({\"City ID\": city_id_list, \"City\": city_name_list, \"Country\": country_list, \"Lat\": lat_list, \"Lng\": lng_list,\n",
+    "                         \"Temperature\": temp_list, \"Humidity\": humidity_list, \"Clouds\": clouds_list,\n",
+    "                         \"Wind Speed\": wind_speed_list})\n",
+    "cities_df.head()"
    ]
   },
   {
