--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -782,13 +782,15 @@
     "number = 1\n",
     "\n",
     "#Lists for holding required items\n",
-    "city_name = []\n",
-    "lat = []\n",
-    "lng = []\n",
-    "temp = []\n",
-    "humid = []\n",
-    "clouds = []\n",
-    "wind = []\n",
+    "city_id_list = []\n",
+    "city_name_list = []\n",
+    "country_list = []\n",
+    "lng_list = []\n",
+    "lat_list = []\n",
+    "temp_list = []\n",
+    "humidity_list = []\n",
+    "clouds_list = []\n",
+    "wind_speed_list = []\n",
     "\n",
     "#Loop through each city, extract required items, and print result\n",
     "print('------------------------------')\n",
