changing try and catch

--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -799,24 +799,14 @@
     "\n",
     "for city in cities:\n",
     "    try:\n",
-    "        city_data = (requests.get(url + '&q=' + city)).json()\n",
-    "        city_name.append(city_data['name'])\n",
-    "        lat.append(city_data['coord']['lat'])\n",
-    "        lng.append(city_data['coord']['lon'])\n",
-    "        temp.append(city_data['main']['temp'])\n",
-    "        humid.append(city_data['main']['humidity'])\n",
-    "        clouds.append(city_data['clouds']['all'])\n",
-    "        wind.append(city_data['wind']['speed'])\n",
-    "        print(f'City number {number} of {len(cities)} complete. | Added {city}')\n",
-    "        number = number + 1\n",
+    "       # Get the JSON response from the OpenWeather API\n",
+    "    response_json = requests.get(query_url + city).json()\n",
     "    \n",
-    "    except KeyError:\n",
-    "        print(f'Missing data in city number {number} of {len(cities)}. | Skipping {city}')\n",
-    "        number = number + 1\n",
+    "    # Start the error handling\n",
+    "    # Retrieve the items for each field and append them to the empty lists  \n",
+    "    try:\n",
     "        \n",
-    "print('------------------------------')\n",
-    "print('Data Retrieval Complete')\n",
-    "print('------------------------------')"
+    "        "
    ]
   },
   {
