--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -805,7 +805,34 @@
     "    # Start the error handling\n",
     "    # Retrieve the items for each field and append them to the empty lists  \n",
     "    try:\n",
+    "        city_id = response_json['id']\n",
+    "        city_id_list.append(city_id)\n",
+    "            \n",
+    "        city_name = response_json['name']\n",
+    "        city_name_list.append(city_name)\n",
     "        \n",
+    "        country_name = response_json['sys']['country']\n",
+    "        country_list.append(country_name)\n",
+    "\n",
+    "        lng = response_json['coord']['lon']\n",
+    "        lng_list.append(lng)\n",
+    "\n",
+    "        lat = response_json['coord']['lat']\n",
+    "        lat_list.append(lat)\n",
+    "\n",
+    "        temp = response_json['main']['temp']\n",
+    "        temp_list.append(temp)\n",
+    "\n",
+    "        humidity = response_json['main']['humidity']\n",
+    "        humidity_list.append(humidity)\n",
+    "\n",
+    "        clouds = response_json['clouds']['all']\n",
+    "        clouds_list.append(clouds)\n",
+    "\n",
+    "        wind_speed = response_json['wind']['speed']\n",
+    "        wind_speed_list.append(wind_speed)\n",
+    "    \n",
+    "        print(f\"City Name: {city}, City ID: {city_id}\")\n",
     "        "
    ]
   },
