--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -811,7 +811,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cities_df = pd.DataFrame({\"City ID\": city_id_list, \"City\": city_name_list, \"Country\": country_list, \"Lat\": lat_list, \"Lng\": lng_list,\n",
+    "                         \"Temperature\": temp_list, \"Humidity\": humidity_list, \"Clouds\": clouds_list,\n",
+    "                         \"Wind Speed\": wind_speed_list, \"Date\": date})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -858,24 +869,14 @@
        "Index: []"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cities_df = pd.DataFrame({\"City ID\": city_id_list, \"City\": city_name_list, \"Country\": country_list, \"Lat\": lat_list, \"Lng\": lng_list,\n",
-    "                         \"Temperature\": temp_list, \"Humidity\": humidity_list, \"Clouds\": clouds_list,\n",
-    "                         \"Wind Speed\": wind_speed_list, \"Date\": date})\n",
     "cities_df.head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
