--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -1851,7 +1851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1872,6 +1872,15 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 432x288 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1889,7 +1898,8 @@
     "plt.xlabel('Latitude')\n",
     "plt.ylabel('Max Temp')\n",
     "print(f\"The r-squared is: {rvalue}\")\n",
-    "plt.show()"
+    "plt.show()\n",
+    "plt.savefig(\"Images/north_hemi_lat_temp_regression.png\")"
    ]
   },
   {
