--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -2268,7 +2268,26 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x_values = southern_x_v['Lat']\n",
+    "\n",
+    "y_values = southern_x_v['Wind Speed']\n",
+    "# plt.scatter(x_values,y_values)\n",
+    "# plt.xlabel('Rooms in House')\n",
+    "# plt.ylabel('Median House Prices ($1000)')\n",
+    "# plt.show()\n",
+    "(slope, intercept, rvalue, pvalue, stderr) = linregress(x_values, y_values)\n",
+    "regress_values = x_values * slope + intercept\n",
+    "line_eq = \"y = \" + str(round(slope,2)) + \"x + \" + str(round(intercept,2))\n",
+    "plt.scatter(x_values,y_values)\n",
+    "plt.plot(x_values,regress_values,\"r-\")\n",
+    "plt.annotate(line_eq,(0,5),fontsize=15,color=\"red\")\n",
+    "plt.xlabel('Wind speed')\n",
+    "plt.ylabel('Max Temp')\n",
+    "print(f\"The r-squared is: {rvalue}\")\n",
+    "plt.show()\n",
+    "plt.savefig('../output_data/S_linear_Lat_W.png')"
+   ]
   },
   {
    "cell_type": "code",
