--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -2265,7 +2265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -2312,7 +2312,7 @@
     "plt.ylabel('Max Temp')\n",
     "print(f\"The r-squared is: {rvalue}\")\n",
     "plt.show()\n",
-    "plt.savefig('Images/S_linear_Lat_W.png')"
+    "plt.savefig(\"Images/S_linear_Lat_W.png\")"
    ]
   },
   {
